--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,51 @@
+/* latin */
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(VaralaRound-latin.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(VaralaRound-latin-ext.woff2) format('woff2');
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
 html, body, #root {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+}
+
+body * {
+  font-family: "Varela Round", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  /* background-color: #f5f5f5; */
+  color: #333;
+}
+
+.container {
+  display: flex;
+  max-width: 600px;
+  margin: 0 auto;
+  flex-direction: column;
+  height: 100%;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 24px;
 }
 
 .todo {
@@ -12,3 +55,41 @@ html, body, #root {
   align-items: center;
   column-gap: 24px;
 }
+
+.todo__input {
+  flex-grow: 1;
+  height: 100%;
+  font-size: 24px;
+  padding: 0 16px;
+  border: none;
+  appearance: none;
+  border-radius: 8px;
+}
+
+.edit-mode {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.new-todo-container {
+  margin-top: 24px;
+  height: 56px;
+  display: flex;
+  flex-direction: row;
+}
+
+.drag-handle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: grab;
+  height: 56px;
+  width: 56px;
+}
+
+.drag-handle__icon {
+  width: 24px;
+  height: 24px;
+}
+
