--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 body * {
@@ -39,6 +39,13 @@ body * {
   margin: 0 auto;
   flex-direction: column;
   height: 100%;
+}
+
+.header {
+  text-align: center;
+  margin-top: 56px;
+  font-size: 48px;
+  font-weight: 700;
 }
 
 .todo-list {
@@ -66,17 +73,44 @@ body * {
   border-radius: 8px;
 }
 
+.todo__input:focus {
+  outline: 2px solid #7ac142;
+}
+
+.todo__delete {
+  height: 56px;
+  width: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-family: "Varela Round", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  border: 2px solid #C50022;
+  background: none;
+  color: #C50022;
+  border-radius: 8px;
+}
+
 .edit-mode {
   position: absolute;
   top: 0;
   right: 0;
+  height: 56px;
+  width: 56px;
+  opacity: 0;
+  cursor: pointer;
 }
 
 .new-todo-container {
   margin-top: 24px;
+  margin-left: 80px;
+  margin-right: 80px;
   height: 56px;
   display: flex;
   flex-direction: row;
+  margin-bottom: 56px;
 }
 
 .drag-handle {
@@ -93,3 +127,60 @@ body * {
   height: 24px;
 }
 
+
+.checkmark {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  display: block;
+  stroke-width: 2;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  box-shadow: inset 0px 0px 0px #7ac142;
+  animation: fill 0.4s ease-in-out 0.4s forwards, scale 0.3s ease-in-out 0.9s both;
+}
+
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: #7ac142;
+  fill: none;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+.checkmark__unchecked {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  display: block;
+  border: 2px solid #7ac142;
+  box-sizing: border-box;
+}
+
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes scale {
+  0%, 100% {
+    transform: none;
+  }
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
+  }
+}
+@keyframes fill {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px #7ac142;
+  }
+}
